--- a/src/app/postfacebook/postfacebook.component.css
+++ b/src/app/postfacebook/postfacebook.component.css
@@ -1,7 +1,7 @@
 .post {
-  width: 500px;
+  width: 600px;
   background-color: rgb(70, 70, 70);
-  border-radius: 4px;
+  border-radius: 7px;
   margin: auto;
 }
 
@@ -44,6 +44,17 @@
   border-radius: 50%;
   cursor: pointer;
   transition: 1s all;
+}
+.control {
+  background-color: rgb(85, 85, 85);
+  width: 250px;
+  height: 450px;
+  border-radius: 7px;
+  margin: 30px;
+  position: absolute;
+  top: 50px;
+  margin-left: 340px;
+  transition: 3s all;
 }
 
 .panelcontrol:hover {
